@@ -12,7 +12,7 @@
 # See the file "license.terms" for information on usage and redistribution
 # of this file, and for a DISCLAIMER OF ALL WARRANTIES.
 #
-# RCS: @(#) $Id: io.test,v 1.15 2001/03/30 23:06:40 andreas_kupries Exp $
+# RCS: @(#) $Id: io.test,v 1.16 2001/04/04 17:35:25 andreas_kupries Exp $
 
 if {[lsearch [namespace children] ::tcltest] == -1} {
     package require tcltest
@@ -6723,13 +6723,6 @@ test io-58.1 {Tcl_NotifyChannel and error when closing} {unixOrPc} {
 } {1 {gets {normal message from pipe} gets {} catch {error message from pipe}}}
 
 
-
-if {[info commands testthread] != {}} {
-    set mainthread [testthread id]
-} else {
-    set mainthread 0
-}
-
 test io-59.1 {Thread reference of channels} {
     # TIP #10
     # More complicated tests (like that the reference changes as a
@@ -6741,7 +6734,7 @@ test io-59.1 {Thread reference of channels} {
     set result [testchannel mthread $f]
     close $f
     set result
-} $mainthread
+} [testmainthread]
 
 
 
