@@ -1,3 +1,10 @@
+2001-04-04  Andreas Kupries  <andreas_kupries@users.sourceforge.net>
+
+	* generic/tclTest.c:
+	* tests/io.tests: TIP #10 followup correcting a problem with the
+	  original patch because of the lacck of 'testthread id' for a
+	  non-threaded compilation.
+
 2001-04-04  Kevin Kenny <kennykb@acm.org>
 
 	* doc/ByteArrObj.3:
